--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
     <p>немає ніякіх сертифікатів, є аттистат за окінчення дев'ятого класу школи</p>
 
     <p>займаюся нічим, а якщо про себе росказувати, то готовий на все поки немає досвіду роботи, можу працювати за їжу</p>
+
+    <P>Зв'язатися зі самим найкращим працівником можно по номеру телефона: +380984856216
+        або по електронній пошті: jujupipiok@gmail.com </p>
 </body>
 </html>
